# SeaFlows

./: .env.example  .gitignore  Makefile  README.md  go.mod  seaflows_api.py  wsgi.py
assets/: .env.example  rrdcached.service  seaflows-collector.service  seaflows-exporter.service
backend/: Makefile  Makefile.am  autogen.sh  configure.ac  install.sh  setup.sh
backend/include/: broker.h  bucket.h  collector.h  gc.h  rrdtool.h  sflow.h
backend/src/: Makefile.am  broker.c  bucket.c  collector.c  main.c  rrdtool.c  sflow.c
cmd/collector/: main.go
cmd/exporter/: main.go
collector/cc/: Makefile.am  configure.ac
collector/cc/include/: bucket.h  gc.h  listener.h  sflow.h
collector/cc/src/: broker.c  bucket.c  gc.c  listener.c  main.c  rrdtool.c  sflow.c
collector/go/: main.go
collector/go/broker/: broker.go
collector/go/listener/: listener.go
collector/go/rrd/: rrd.go
collector/go/sflow/: flow_record.go  flow_sample.go  raw_packet.go  sflow.go  storable_flow.go
exporter/go/: go.mod  main.go  rrd.go
frontend/: seaflows_api.ini  seaflows_api.py  wsgi.py
frontend/cmd/: rrd.go
frontend/cmd/seaflows-api/: .env.example  main.go
frontend/go/: go.sum  main.go  rrd.go  seaflows_exporter.go
frontend/go/handlers/: rrd_handlers.go
frontend/go/rrd/: rrd_reader.go
frontend/internal/handlers/: flow.go  flow_handler.go  map_handler.go  p2p_handler.go
frontend/internal/helpers/: ixf.go
frontend/internal/models/: map_data.go  rrd_data.go
frontend/internal/rrd/: data.go  rrd.go
frontend/internal/services/: map_service.go  rrd_service.go
frontend/seaflows/: __init__.py  seaflows_api.py
frontend/utils/: gen_peer_files.py
internal/broker/: broker.go
internal/handlers/: api_handler.go  flow_handler.go  interfaces.go  map_handler.go  sflow_handler.go
internal/helpers/: ixf.go
internal/listener/: listener.go
internal/middleware/: auth.go
internal/models/: aggregated_flow_data.go  map_data.go  monitor_record.go  rrd_data.go  sflow_data.go
internal/rrd/: rrd.go
internal/services/: broker_service.go  interfaces.go  map_service.go  monitor_service.go  rrd_service.go  sflow_service.go
internal/sflow/: flow_record.go  flow_sample.go  raw_packet.go  sflow.go
legacy/cc/include/: bucket.h
seaflows/middleware/: rrd.py
src/: memory.h  seaflows.c  seaflows.h
src/broker/: broker.c  broker.h
src/bucket/: bucket.c  bucket.h
src/collector/: collector.c  collector.h  error.h  main.c  server.c  server.h
src/gc/: gc.c  gc.h
src/matrix/: matrix.c  matrix.h
src/parser/: parser.h
src/queue/: queue.c  queue.h
src/rrdtool/: rrdtool.c  rrdtool.h
src/seaflows/: collector.c  collector.h  main.c
src/sflow/: export.h  net.h  sflow.c  sflow.h
(+12 files in other folders)
